# kpm-tools

./: .cookiecutter.json  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: api.md  conf.py  index.md  reference.md  requirements.txt  tutorials.md  usage.md
docs/tutorials/: tutorial_bloch.ipynb  tutorial_conductivity.ipynb  tutorial_evolution_performance.ipynb  tutorial_operators_and_functions.ipynb  tutorial_tiles.ipynb  tutorial_time_evolution.ipynb
src/kpm_tools/: __init__.py  __main__.py  bloch.py  common.py  evolution.py  hamiltonians.py  kpm_funcs.py  kpm_generator.py  plotting.py  tiles.py  utils.py
tests/: __init__.py  test_main.py
